--- a/package.json
+++ b/package.json
@@ -8,23 +8,19 @@
   },
   "author": "Basir Rahimi",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "browser-sync": "^2.26.7",
+  "dependencies": {
+    "browser-sync": "^2.27.11",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
-    "gulp-imagemin": "^6.2.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-eslint": "^6.0.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^4.13.1"
-  },
-  "dependencies": {
-    "jquery": "^3.4.1"
+    "node-sass": "^8.0.0"
   }
 }
