--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^8.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.4"
   }
 }
